--- a/wordsmith-web-serv.yaml
+++ b/wordsmith-web-serv.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: wordsmith-web
+  name: {{ .Values.name}}
 spec:
   selector:
-    app: wordsmith-web
+    app: {{ .Values.name}}
   ports:
   - port: 8080
     targetPort: 80
